--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,14 @@
-/* Import font */
 @import url("https://fonts.googleapis.com/css2?family=Barlow:wght@300;900&display=swap");
+@import url("fontawesome-all.min.css");
 
-/* Reset base */
+/*
+    Aerial by HTML5 UP
+    html5up.net | @ajlkn
+    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+*/
+
+/* Reset & Basic */
+
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
@@ -9,10 +16,10 @@ code, del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var, b,
 u, i, center, dl, dt, dd, ol, ul, li, fieldset,
 form, label, legend, table, caption, tbody,
-tfoot, thead, tr, th, td, article, aside, canvas,
-details, embed, figure, figcaption, footer, header,
-hgroup, menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+tfoot, thead, tr, th, td, article, aside,
+canvas, details, embed, figure, figcaption,
+footer, header, hgroup, menu, nav, output, ruby,
+section, summary, time, mark, audio, video {
     margin: 0;
     padding: 0;
     border: 0;
@@ -27,81 +34,124 @@ footer, header, hgroup, menu, nav, section {
 }
 
 body {
-    background: #f7f7f7; /* Sfondo grigio chiaro */
-    color: #333333; /* Testo scuro */
+    line-height: 1;
+    -webkit-text-size-adjust: none;
+    color: #fff;
     font-family: 'Barlow', sans-serif;
     font-size: 15pt;
     font-weight: 300;
+    letter-spacing: -0.025em;
     line-height: 1.75em;
-    overflow-x: hidden;
+    overflow: hidden;
+    background: #111627; /* Colore sfondo scelto */
 }
 
-/* Links */
-a {
-    color: #333333;
-    text-decoration: none;
-    border-bottom: dotted 1px #333;
-    transition: all 0.2s ease-in-out;
-}
+ol, ul { list-style: none; }
 
-a:hover {
-    border-color: transparent;
-}
+blockquote, q { quotes: none; }
 
-/* Wrapper e main */
-#wrapper, #main {
+table { border-collapse: collapse; border-spacing: 0; }
+
+input, select, textarea { appearance: none; -webkit-appearance: none; }
+
+/* Wrapper */
+
+html { box-sizing: border-box; }
+*, *:before, *:after { box-sizing: inherit; }
+
+#wrapper {
+    animation: wrapper 3s forwards;
     height: 100%;
-    width: 100%;
+    left: 0;
+    opacity: 0;
     position: fixed;
     top: 0;
+    width: 100%;
+}
+
+/* BG */
+
+#bg {
+    background: #111627; /* Solo colore, niente immagine */
+    background-image: none;
+    height: 100%;
     left: 0;
+    opacity: 1;
+    position: fixed;
+    top: 0;
+}
+
+/* Overlay */
+
+#overlay {
+    background: none; /* Togli overlay */
+    height: 100%;
+    left: 0;
+    opacity: 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+/* Main */
+
+#main {
+    height: 100%;
+    left: 0;
+    position: fixed;
     text-align: center;
+    top: 0;
+    width: 100%;
+}
+
+#main:before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    margin-right: 0;
+    vertical-align: middle;
+    width: 1px;
 }
 
 /* Header */
+
 #header {
     display: inline-block;
+    opacity: 1;
     position: relative;
-    top: 0;
-    width: 90%;
     text-align: center;
+    width: 90%;
+    top: 0;
+    vertical-align: middle;
 }
 
 #header h1 {
-    font-size: 4em;
+    font-family: 'Barlow', sans-serif;
+    font-size: 4.35em;
     font-weight: 900;
+    letter-spacing: -0.035em;
+    line-height: 1em;
 }
 
 #header p {
     font-size: 1.25em;
+    margin: 0.75em 0 0.25em 0;
     opacity: 0.75;
 }
 
-/* Nav */
-#header nav li {
-    display: inline-block;
-    margin: 0 0.5em;
-}
-
-#header nav a:before {
-    display: block;
-    font-size: 1.75em;
-}
-
 /* Footer */
+
 #footer {
-    position: absolute;
     bottom: 0;
-    width: 100%;
+    cursor: default;
     height: 6em;
+    left: 0;
     line-height: 8em;
+    position: absolute;
     text-align: center;
+    width: 100%;
     background: none;
 }
 
-/* Responsive base */
-@media screen and (max-width: 736px) {
-    body { font-size: 11pt; }
-    #header h1 { font-size: 2.5em; }
-    #header p { font-size: 1em; }
-}
+/* Media Queries & Responsive */
+/* Manteniamo le regole del layout originale */
