--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,14 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow:wght@300;900&display=swap");
-@import url("fontawesome-all.min.css");
 
-/*
-    Aerial by HTML5 UP
-    html5up.net | @ajlkn
-    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
-
-/* Reset & Basic */
-
+/* Reset base */
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
@@ -35,45 +27,51 @@ footer, header, hgroup, menu, nav, section {
 
 body {
     line-height: 1;
-    -webkit-text-size-adjust: none;
-    color: #fff;
+    color: #e0e0e0;
     font-family: 'Barlow', sans-serif;
     font-size: 15pt;
     font-weight: 300;
     letter-spacing: -0.025em;
     line-height: 1.75em;
+    background: #111627 !important;
     overflow: hidden;
-    background: #111627; /* Colore sfondo scelto */
 }
 
-ol, ul { list-style: none; }
+ol, ul {
+    list-style: none;
+}
 
-blockquote, q { quotes: none; }
+blockquote, q {
+    quotes: none;
+}
 
-table { border-collapse: collapse; border-spacing: 0; }
+blockquote:before, blockquote:after, q:before, q:after {
+    content: '';
+    content: none;
+}
 
-input, select, textarea { appearance: none; -webkit-appearance: none; }
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
 
 /* Wrapper */
-
 html { box-sizing: border-box; }
 *, *:before, *:after { box-sizing: inherit; }
 
 #wrapper {
-    animation: wrapper 3s forwards;
     height: 100%;
     left: 0;
-    opacity: 0;
+    opacity: 1;
     position: fixed;
     top: 0;
     width: 100%;
 }
 
-/* BG */
-
+/* Background */
 #bg {
-    background: #111627; /* colore scelto */
-    background-image: none;
+    background: #111627 !important;
+    background-image: none !important;
     height: 100%;
     left: 0;
     opacity: 1;
@@ -81,21 +79,12 @@ html { box-sizing: border-box; }
     top: 0;
 }
 
-
-/* Overlay */
-
+/* Overlay rimosso */
 #overlay {
-    background: none; /* Togli overlay */
-    height: 100%;
-    left: 0;
-    opacity: 0;
-    position: fixed;
-    top: 0;
-    width: 100%;
+    background: none !important;
 }
 
 /* Main */
-
 #main {
     height: 100%;
     left: 0;
@@ -105,44 +94,45 @@ html { box-sizing: border-box; }
     width: 100%;
 }
 
-#main:before {
-    content: '';
-    display: inline-block;
-    height: 100%;
-    margin-right: 0;
-    vertical-align: middle;
-    width: 1px;
-}
-
 /* Header */
-
 #header {
+    cursor: default;
     display: inline-block;
     opacity: 1;
     position: relative;
     text-align: center;
+    top: -1em;
     width: 90%;
-    top: 0;
-    vertical-align: middle;
 }
 
 #header h1 {
-    font-family: 'Barlow', sans-serif;
     font-size: 4.35em;
     font-weight: 900;
     letter-spacing: -0.035em;
     line-height: 1em;
+    color: #e0e0e0 !important;
 }
 
 #header p {
     font-size: 1.25em;
     margin: 0.75em 0 0.25em 0;
     opacity: 0.75;
+    color: #e0e0e0 !important;
+}
+
+#header nav a {
+    color: #e0e0e0 !important;
+    text-decoration: none;
+}
+
+#header nav a:hover {
+    color: #ffffff !important;
 }
 
 /* Footer */
-
 #footer {
+    background: none !important;
+    color: #e0e0e0 !important;
     bottom: 0;
     cursor: default;
     height: 6em;
@@ -151,8 +141,24 @@ html { box-sizing: border-box; }
     position: absolute;
     text-align: center;
     width: 100%;
-    background: none;
 }
 
-/* Media Queries & Responsive */
-/* Manteniamo le regole del layout originale */
+/* Icone */
+.icon {
+    text-decoration: none;
+    position: relative;
+    color: #e0e0e0 !important;
+}
+
+/* Responsive */
+@media screen and (max-width: 1280px) {
+    body { font-size: 12pt; }
+}
+
+@media screen and (max-width: 736px) {
+    body { font-size: 11pt; }
+}
+
+@media screen and (max-width: 480px) {
+    body { font-size: 10pt; }
+}
